# kugoo-s3-bluepill

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
docs/: gui.kra  reference.ru.md  throttle_to_speed.ods  throttle_to_speed_raw.csv
docs/images/: assembly_order.kra
extra/: arm-gcc-toolchain.cmake  stm32f103c8t6-opencm3.ld
font/: font_convert.py  sprites.kra
pcb/: README.md  kugoo-s3-bluepill.dch  kugoo-s3-bluepill.dip
pcb/rev0.3_LM2596/: kugoo-s3-bluepill.dch  kugoo-s3-bluepill.dip
src/: font.h  globals.c  globals.h  gui.c  gui.h  hardware.c  hardware.h  keyboard.c  keyboard.h  kugoo_s3.c  kugoo_s3.h  main.c  persistence.c  persistence.h  ssd1306.c  ssd1306.h  utils.c  utils.h
src/views/: detailed_view.c  detailed_view.h  last_trips_view.c  last_trips_view.h  main_view.c  main_view.h  settings_view.c  settings_view.h  trigger_calibration_view.c  trigger_calibration_view.h
